--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <table id="calcu">
+    <table id="calc">
         <tr>
             <td colspan="3"><input type="text" id="result"></td>
-            <td><input type="button" value="Clear" onclick="clr()"></td>
+            <td><input type="button" value="Clear" class="btn"></td>
         </tr>
         <tr>
-            <td><input type="button" value="1" onclick="display('1')"></td>
-            <td><input type="button" value="2" onclick="display('2')"></td>
-            <td><input type="button" value="3" onclick="display('3')"></td>
-            <td><input type="button" value="+" onclick="display('+')"></td>
+            <td><input type="button" value="1" class="btn"></td>
+            <td><input type="button" value="2" class="btn"></td>
+            <td><input type="button" value="3" class="btn"></td>
+            <td><input type="button" value="+" class="btn"></td>
         </tr>
         <tr>
-            <td><input type="button" value="4" onclick="display('4')"></td>
-            <td><input type="button" value="5" onclick="display('5')"></td>
-            <td><input type="button" value="6" onclick="display('6')"></td>
-            <td><input type="button" value="-" onclick="display('-')"></td>
+            <td><input type="button" value="4" class="btn"></td>
+            <td><input type="button" value="5" class="btn"></td>
+            <td><input type="button" value="6" class="btn"></td>
+            <td><input type="button" value="-" class="btn"></td>
         </tr>
         <tr>
-            <td><input type="button" value="7" onclick="display('7')"</td>
-            <td><input type="button" value="8" onclick="display('8')"</td>
-            <td><input type="button" value="9" onclick="display('9')"</td>
-            <td><input type="button" value="*" onclick="display('*')"</td>
+            <td><input type="button" value="7" class="btn"</td>
+            <td><input type="button" value="8" class="btn"</td>
+            <td><input type="button" value="9" class="btn"</td>
+            <td><input type="button" value="*" class="btn"</td>
         </tr>
         <tr>
-            <td><input type="button" value="0" onclick="display('0')"</td>
-            <td><input type="button" value="." onclick="display('.')"</td>
-            <td><input type="button" value="=" onclick="display('=')"</td>
-            <td><input type="button" value="/" onclick="display('/')"</td>
+            <td><input type="button" value="0" class="btn"</td>
+            <td><input type="button" value="." class="btn"</td>
+            <td><input type="button" value="=" class="btn"</td>
+            <td><input type="button" value="/" class="btn"</td>
         </tr>
     </table>
     <script src="./script.js" defer></script>
