--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <h1>Calculator</h1>
+    </header>
     <table id="calc">
         <tr>
             <td colspan="3"><input type="text" id="result"></td>
@@ -39,5 +42,8 @@
         </tr>
     </table>
     <script src="./script.js" defer></script>
+    <footer>
+        <p>&#169; Hitesh Chundi</p>
+    </footer>
 </body>
 </html>
